[package]
name = "bae_sf"
description = "Various sound formats supported by the Broad Audion Engine."
repository = "https://github.com/ChylerDev/BAE_SF"
license = "MIT"
version = "0.14.0" # don't forget to fix version numbers in README.md documentation links
authors = ["Chyler Morrison <contact@chyler.info>"]
edition = "2018"
keywords = [ "audio", "audio-processing" ]
categories = [ "multimedia::audio" ]

[badges]
is-it-maintained-issue-resolution = { repository = "ChylerDev/BAE" }
is-it-maintained-open-issues = { repository = "ChylerDev/BAE" }
maintenance = { status = "actively-developed" }

[dependencies]
bae_types = { git = "https://github.com/ChylerDev/BAE_Types", branch = "master" }
bae_utils = { git = "https://github.com/ChylerDev/BAE_Utils", branch = "dev" }

[dev-dependencies]
version-sync = "0.9"
